--- a/ProjectSettings/McpUnitySettings.json
+++ b/ProjectSettings/McpUnitySettings.json
@@ -1,7 +1,7 @@
 {
     "Port": 8090,
     "RequestTimeoutSeconds": 10,
-    "AutoStartServer": true,
+    "AutoStartServer": false,
     "EnableInfoLogs": true,
     "NpmExecutablePath": "",
     "AllowRemoteConnections": false
